--- a/course/src/main/resources/application.yml
+++ b/course/src/main/resources/application.yml
@@ -1,5 +1,11 @@
 server:
   port: 8081
+  servlet:
+    session:
+      cookie:
+        same-site: lax
+        secure: false
+        http-only: true
 
 spring:
   application:
